Update font size and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,8 @@ body {
 }
 .lead-title{
   margin:150px 0 30px 0;
-  font-size:40px;
+  font-size: 60px;
+  text-align: center;
 }
 .flex-sect{
   background-color:#fafafa;
